; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_ssim.c_ssim_end1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_ssim.c_ssim_end1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ssim_end1.ssim_c1 = internal constant i32 416, align 4
@ssim_end1.ssim_c2 = internal constant i32 235963, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32, i32, i32, i32)* @ssim_end1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @ssim_end1(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %12, align 4
  %19 = load i32, i32* %11, align 4
  %20 = mul nsw i32 %19, 64
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = mul nsw i32 %21, %22
  %24 = sub nsw i32 %20, %23
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = mul nsw i32 %25, %26
  %28 = sub nsw i32 %24, %27
  store i32 %28, i32* %13, align 4
  %29 = load i32, i32* %12, align 4
  %30 = mul nsw i32 %29, 64
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %10, align 4
  %33 = mul nsw i32 %31, %32
  %34 = sub nsw i32 %30, %33
  store i32 %34, i32* %14, align 4
  %35 = load i32, i32* %9, align 4
  %36 = mul nsw i32 2, %35
  %37 = load i32, i32* %10, align 4
  %38 = mul nsw i32 %36, %37
  %39 = add nsw i32 %38, 416
  %40 = sitofp i32 %39 to float
  %41 = load i32, i32* %14, align 4
  %42 = mul nsw i32 2, %41
  %43 = add nsw i32 %42, 235963
  %44 = sitofp i32 %43 to float
  %45 = fmul float %40, %44
  %46 = load i32, i32* %9, align 4
  %47 = load i32, i32* %9, align 4
  %48 = mul nsw i32 %46, %47
  %49 = load i32, i32* %10, align 4
  %50 = load i32, i32* %10, align 4
  %51 = mul nsw i32 %49, %50
  %52 = add nsw i32 %48, %51
  %53 = add nsw i32 %52, 416
  %54 = sitofp i32 %53 to float
  %55 = load i32, i32* %13, align 4
  %56 = add nsw i32 %55, 235963
  %57 = sitofp i32 %56 to float
  %58 = fmul float %54, %57
  %59 = fdiv float %45, %58
  ret float %59
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
